# multiagent_trade_system

./: .env.example  .gitignore  AGENT.md  CHANGELOG.md  CLAUDE.md  CONCISE_CODING.md  IMPLEMENTATION_PLAN.md  PHASE_1_IMPLEMENTATION.md  PHASE_2_IMPLEMENTATION.md  README.md  main.py  pyproject.toml  test_crewai.py  test_data_ingestion.py  test_risk_manager.py
agents/: bear_agent.py  bull_agent.py  debate_manager.py  decision_manager.py  trading_crew.py
analyst_service/: IMPLEMENTATION_PLAN.md  __init__.py  crewai_storage.py  data_context.py  main.py
backend/: api_diagram.md
cli/: __init__.py  portfolio_cli.py
data/: account_status_20250530_222658.json  crewai_test_20250528_151901.json  daily_summary_20250919_2153.json  daily_summary_20250926_1435.json  daily_summary_20250926_2106.json  daily_summary_20250929_1436.json  daily_summary_20250929_2105.json  daily_summary_20250930_1435.json  daily_summary_20250930_2106.json  daily_summary_20251001_1436.json  daily_summary_20251001_2106.json  daily_summary_20251002_1436.json  daily_summary_20251002_2106.json  daily_summary_20251003_1435.json  daily_summary_20251003_2106.json  daily_summary_20251006_1436.json  daily_summary_20251006_2106.json  daily_summary_20251007_1437.json  daily_summary_20251007_2106.json  daily_summary_20251008_1437.json  daily_summary_20251008_2106.json  daily_summary_20251009_1436.json  daily_summary_20251009_2106.json  daily_summary_20251010_1436.json  daily_summary_20251010_2106.json  daily_summary_20251013_1436.json  daily_summary_20251013_2106.json  daily_summary_20251014_1437.json  (+155 more)
(+88 files in other folders)
